[gd_scene load_steps=4 format=3 uid="uid://dgc0ktjc0qmjr"]

[ext_resource type="Theme" uid="uid://c521sxmdt64pl" path="res://addons/UDSEngine/Database_Manager/Theme and Style/main_30.tres" id="1_rchgg"]
[ext_resource type="Script" path="res://addons/UDSEngine/Event_Manager/Command_List_Forms/Command_List_Form.gd" id="1_yu2vf"]
[ext_resource type="PackedScene" uid="uid://ct36bi7vyhl6c" path="res://addons/UDSEngine/Event_Manager/Command_List_Forms/Command_List_Button.tscn" id="3_siuql"]

[node name="CommandListForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rchgg")
script = ExtResource("1_yu2vf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
disabled = true
text = "Command List"

[node name="Close" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Close"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DialogVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/DialogVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dialog"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/DialogVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/DialogVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="start_dialog" parent="VBoxContainer/HBoxContainer/DialogVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "New Dialog"

[node name="InventoryVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="modify_player_inventory" parent="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "Modify Inventory"

[node name="ProgressionVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Event Progression"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="change_game_state" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "Game State"

[node name="change_local_variable" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "Local Variables"

[node name="change_global_variable" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "Global Variables"

[node name="remove_event" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "Remove Event"

[node name="wait" parent="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "Wait"

[node name="MovementVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MovementVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Player Movement"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/MovementVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MovementVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="transfer_player" parent="VBoxContainer/HBoxContainer/MovementVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "Player Transfer"

[node name="MiscVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Miscellaneous"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="print_to_console" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "Print to Console"

[node name="sfx" parent="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_siuql")]
layout_mode = 2
text = "SFX"

[connection signal="button_up" from="VBoxContainer/HBoxContainer2/Close" to="." method="_on_close_button_up"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/DialogVBoxContainer/ScrollContainer/VBoxContainer/start_dialog" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/InventoryVBoxContainer/ScrollContainer/VBoxContainer/modify_player_inventory" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/change_game_state" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/change_local_variable" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/change_global_variable" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/remove_event" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/ProgressionVBoxContainer/ScrollContainer/VBoxContainer/wait" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/MovementVBoxContainer/ScrollContainer/VBoxContainer/transfer_player" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer/VBoxContainer/print_to_console" to="." method="_open_selected_form"]
[connection signal="btn_pressed" from="VBoxContainer/HBoxContainer/MiscVBoxContainer/ScrollContainer/VBoxContainer/sfx" to="." method="_open_selected_form"]
